# CLWriting

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json  playwright.config.ts  playwright.true-host.config.ts  pyproject.toml  requirements.txt  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  desktop.yml  story-craft.yml
Dev/Plans/: README.md  clwriting-gui-方案.md  desktop-workdir-方案.md  electron-方案.md  improvement-todo.md  studio-2.1-实施.md  studio-2.3-实施.md  studio-2.4-实施.md  studio-2.5-实施.md
Mockup/v5/: index.html
docs/: claude-code-usage.md  cli-usage.md  data-formats.md  development.md  quickstart.md  rag-config.md  stage3-cc-verification.md  stage4-cc-verification.md  troubleshooting.md
scripts/: dev-api.ts
src/: cli.ts  shims-vue.d.ts
src/ai/: calls.ts
src/auto/: batch.ts  review-batch.ts
src/cache/: healthcheck.ts  rebuild.ts  schema.ts  sync.ts
src/check/: count.ts  growth.ts  leads.ts  manifest-check.ts  report.ts  runner.ts  types.ts
src/cli/: auto.ts  check.ts  confirm.ts  enable-rag.ts  enter.ts  export.ts  finalize.ts  hand.ts  health.ts  import.ts  init.ts  knowledge.ts  learn.ts  list.ts  prepare.ts  read.ts  rebook.ts  record-call.ts  repair-plan.ts  repair.ts  revert.ts  review.ts  roles.ts  session-start.ts  studio.ts  update.ts  use.ts
src/desktop/: main.ts  preload.ts  workdir-store.ts
src/document/: journal.ts  layout.ts  manifest.ts  mutex.ts  (+8 more)
test/: sqlite-smoke.test.ts
知识层/: README.md  _manifest.json
(+703 files in other folders)
