[project]
name = "clwriting-story-craft"
version = "0.1.0"
description = "Claude Code plugin-style Chinese short and novella writing workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "CLWriting contributors" }
]
dependencies = []

[project.optional-dependencies]
locking = [
  "filelock>=3.12"
]
test = [
  "pytest>=8"
]

[tool.story-craft]
plugin-root = "story-craft"
cli = "story-craft/scripts/story_craft.py"
test-command = "python3 -m pytest story-craft/scripts/tests/"
compile-command = "env PYTHONPYCACHEPREFIX=/tmp/story-craft-pyc python3 -m compileall -q story-craft/scripts"

[tool.pytest.ini_options]
testpaths = ["story-craft/scripts/tests"]
python_files = ["test_*.py"]
